Removing role auth since have claims auth
Writing tests for user store.
May need to write own version of UserManager... Really don't want to...

--- a/Copernicus/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/Copernicus/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model Copernicus.Models.ExternalLoginConfirmationViewModel
+﻿@model Copernicus.ViewModels.Authentication.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
