--- a/Copernicus/Views/Account/Login.cshtml
+++ b/Copernicus/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model Copernicus.Models.LoginViewModel
+﻿@model Copernicus.ViewModels.Authentication.LoginViewModel
 
 @{
     ViewBag.Title = "Log in";
