--- a/Copernicus/Views/Account/Register.cshtml
+++ b/Copernicus/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model Copernicus.Models.RegisterViewModel
+﻿@model Copernicus.ViewModels.Authentication.RegisterViewModel
 @{
     ViewBag.Title = "Register";
 }
