--- a/Copernicus/Views/Account/_SetPasswordPartial.cshtml
+++ b/Copernicus/Views/Account/_SetPasswordPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model Copernicus.Models.ManageUserViewModel
+﻿@model Copernicus.ViewModels.Authentication.ManageUserViewModel
 
 <p class="text-info">
     You do not have a local username/password for this site. Add a local
