--- a/Copernicus/Views/Account/_ChangePasswordPartial.cshtml
+++ b/Copernicus/Views/Account/_ChangePasswordPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNet.Identity
-@model Copernicus.Models.ManageUserViewModel
+@model Copernicus.ViewModels.Authentication.ManageUserViewModel
 
 <p>You're logged in as <strong>@User.Identity.GetUserName()</strong>.</p>
 
