Updated plugin code a bit more.

--- a/Copernicus/Views/Admin/Plugins.cshtml
+++ b/Copernicus/Views/Admin/Plugins.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "Available Plugins";
 }
-<form action="" method="post">
+<form action="/Admin/Plugins" method="post">
     <table class="table">
         <tr>
             <th></th>
