Renamed the plugins page

--- a/Copernicus/Views/Admin/PluginsAvailable.cshtml
+++ b/Copernicus/Views/Admin/PluginsAvailable.cshtml
@@ -3,7 +3,8 @@
 @{
     ViewBag.Title = "Available Plugins";
 }
-<form action="/Admin/Plugins" method="post">
+<form action="/Admin/PluginsAvailable" method="post">
+    <h1>Available Plugins</h1>
     <table class="table">
         <tr>
             <th></th>
