--- a/Copernicus/Views/Shared/_LoginPartial.cshtml
+++ b/Copernicus/Views/Shared/_LoginPartial.cshtml
@@ -1,22 +1,7 @@
-﻿@using Microsoft.AspNet.Identity
-@if (Request.IsAuthenticated)
-{
-    using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
-    {
-    @Html.AntiForgeryToken()
-
-    <ul class="nav navbar-nav navbar-right">
-        <li>
-            @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Manage", "Account", routeValues: null, htmlAttributes: new { title = "Manage" })
-        </li>
-        <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
-    </ul>
-    }
-}
-else
-{
-    <ul class="nav navbar-nav navbar-right">
-        <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
-        <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
-    </ul>
+﻿@if (Request.IsAuthenticated) {
+    <li class="right">
+        <li class="right"><a href="/Account/Manage"><img src="/Content/Images/Account2.png" /></a></li>
+    </li>
+} else {
+        <li class="right"><a href="/Account/Login" id="loginLink"><img src="/Content/Images/Login2.png" /></a></li>
 }
