Finishing up API mappings for projects and crm
Noticed a couple bugs that will need to be fixed in the plugin system.
Simplified project system. Now using mostly other plugins for data.
Added RazorGenerator to speed up load times a bit

--- a/Copernicus/Views/Admin/PluginsAvailable.cshtml
+++ b/Copernicus/Views/Admin/PluginsAvailable.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Copernicus.Models.Plugins.Plugin>
+﻿@model IEnumerable<Ironman.Models.Plugins.Plugin>
 
 @{
     ViewBag.Title = "Available Plugins";
@@ -12,7 +12,7 @@
             <th>Description</th>
         </tr>
     
-    @foreach (Copernicus.Models.Plugins.Plugin item in Model)
+    @foreach (Ironman.Models.Plugins.Plugin item in Model)
     {
         <tr>
             <td>
